web/book/tests/snapshots/snapshot__examples__list-equivalence-1.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\nselect [salary]\n"
---
SELECT
  salary
FROM
  employees

