web/book/tests/snapshots/snapshot__examples__list-equivalence-2.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\nderive [\n  gross_salary = salary + payroll_tax,\n  gross_cost = gross_salary + benefits_cost\n]\n"
---
SELECT
  *,
  salary + payroll_tax AS gross_salary,
  salary + payroll_tax + benefits_cost AS gross_cost
FROM
  employees

