web/book/tests/snapshots/snapshot__examples__variables-1.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\ngroup [emp_no] (\n  aggregate [\n    emp_salary = average salary     # average salary resolves to \"AVG(salary)\" (from stdlib)\n  ]\n)\njoin titles {==emp_no}\ngroup [title] (\n  aggregate [\n    avg_salary = average emp_salary\n  ]\n)\nselect salary_k = avg_salary / 1000 # avg_salary should resolve to \"AVG(emp_salary)\"\ntake 10                             # induces new SELECT\nderive salary = salary_k * 1000     # salary_k should not resolve to \"avg_salary / 1000\"\n"
---
WITH table_3 AS (
  SELECT
    AVG(salary) AS _expr_1,
    emp_no
  FROM
    employees
  GROUP BY
    emp_no
),
table_2 AS (
  SELECT
    AVG(table_1._expr_1) AS _expr_0
  FROM
    table_3 AS table_1
    JOIN titles ON table_1.emp_no = titles.emp_no
  GROUP BY
    titles.title
)
SELECT
  _expr_0 / 1000 AS salary_k,
  _expr_0 / 1000 * 1000 AS salary
FROM
  table_2 AS table_0
LIMIT
  10

